--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@sagacious/utils",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "常用工具类",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["utils"],
+  "author": "SagaciousLittle",
+  "repository" :
+  { 
+    "type" : "git",
+    "url" : "https://github.com/SagaciousLittle/sagacious-utils.git"
+  },
   "license": "ISC"
 }
