--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@sagacious/utils",
   "version": "0.0.1",
   "description": "常用工具类",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "tsc -w",
+    "build": "tsc"
   },
   "keywords": ["utils"],
   "author": "SagaciousLittle",
