--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "type": "git",
     "url": "https://github.com/SagaciousLittle/sagacious-utils.git"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.139"
+  }
 }
