--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.15"
+    "@types/mathjs": "^6.0.2",
+    "lodash": "^4.17.15",
+    "mathjs": "^6.2.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.139"
