--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@sagacious/utils",
   "version": "0.0.11",
   "description": "常用工具类",
-  "main": "dist/index.js",
+  "main": "dist/utils.min.js",
   "scripts": {
-    "watch": "tsc -w",
-    "build": "tsc"
+    "clean": "rimraf dist",
+    "build": "yarn clean && rollup -c"
   },
   "keywords": [
     "utils"
@@ -22,13 +22,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.139",
     "@types/mathjs": "^6.0.2",
     "babel-jest": "^24.9.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.24.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.24.3",
+    "typescript": "^3.6.4"
   }
 }
